微信活动最新版

--- a/merry-christmas-new.html
+++ b/merry-christmas-new.html
@@ -19,7 +19,10 @@
 				<img src="img/merry-christmas-new/package01.jpg" />	
 				<a href="javascript:;" class="a_button"><img src="img/merry-christmas-new/button01.png"/></a>
 			</div>
-			<img src="img/merry-christmas-new/photo01.jpg" />
+			<div class="photo01">
+				<img src="img/merry-christmas-new/photo01.jpg" />
+				<img src="img/merry-christmas-new/lamp.gif" class="lamp"/>
+			</div>
 			<div class="cake01">
 				<img src="img/merry-christmas-new/cake01.jpg" />
 				<a href="javascript:;" class="link01"></a>
@@ -43,6 +46,19 @@
 			<p>微信号：InCake_2012</p>
 			<p class="phone">400-921-5757</p>
 		</footer>
+		
+		<!--横屏提示-->
+		<div id="orientLayer" class="mod-orient-layer">
+		    <div class="mol_content">
+		        <div class="mol_desc">为了更好的体验，请使用竖屏浏览</div>
+		    </div>
+		</div>
+		
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/orientLayer.js"></script>
+		<script src="js/merry-christmas-new.js"></script>
+		<script src="js/jq.snow.js"></script>
+		
 		
 	</body>
 </html>
