--- a/valentines-fz.html
+++ b/valentines-fz.html
@@ -6,7 +6,7 @@
 		<meta name="format-detection" content="telephone=no" />
 		<title>福州情人节活动</title>
 		<link rel="stylesheet" type="text/css" href="css/common_b.css"/>
-		<link rel="stylesheet" type="text/css" href="css/valentines.css?aa"/>
+		<link rel="stylesheet" type="text/css" href="css/valentines.css"/>
 	</head>
 	<body>
 		<header>
