情人节音蛋糕活动

--- a/valentines-fz.html
+++ b/valentines-fz.html
@@ -17,8 +17,8 @@
 		<div class="content">
 			
 			<div class="top">
-				<img src="img/valentines/title_fz.png"/>
-				<div class="single single-fz">
+				<img src="img/valentines/title.png"/>
+				<div class="single">
 					<img src="img/valentines/single_bg_fz.png"/>
 					<a href="javascript:;" class="a_flower"></a>
 					<a href="javascript:;" class="a_wine"></a>
