情人节音蛋糕活动

--- a/valentines-fz.html
+++ b/valentines-fz.html
@@ -26,22 +26,28 @@
 				</div>
 			</div>
 			
-			<div class="package01">
-				<a href="javascript:;"><img src="img/valentines/package01.png"/></a>
-			</div>
-			<div class="package02">
-				<a href="javascript:;"><img src="img/valentines/package02_fz.png"/></a>
-			</div>
-			<div class="package03">
-				<a href="javascript:;"><img src="img/valentines/package03_fz.png"/></a>
+			<div class="package">
+				<div class="package01">
+					<img src="img/valentines/package01.png"/>
+					<a href="javascript:;"></a>
+				</div>
+				<div class="package02">
+					<img src="img/valentines/package02_fz.png"/>
+					<a href="javascript:;"></a>
+				</div>
+				<div class="package03">
+					<img src="img/valentines/package03_fz.png"/>
+					<a href="javascript:;"></a>
+				</div>
 			</div>
 			
 			<dl class="rules">
                 <dt><img src="img/valentines/rule_title.png"/></dt>
                 <dd>1.本套餐为限量款，数量有限，售完为止；</dd>
-                <dd>2.活动时间：2月1日至2月22日；</dd>
-                <dd>3.配送时间：2月8日至2月25日；</dd>
+                <dd>2.活动时间：2月3日至2月25日；</dd>
+                <dd>3.配送时间：2月8日至2月28日；</dd>
                 <dd>4.本活动不参加INCAKE积分累计奖励，不与其他代金卡（券）、优惠卡（券）及其他优惠活动同时使用；</dd>
+                <dd>5.活动期间凡订购爱の蜜语系列套餐均可获得蜘蛛网抵用券两张，每单限两张，先到先得，送完为止;</dd>
                 <dd>5.活动仅限福州、厦门地区。</dd>
             </dl>
             
