活动页提交

--- a/dinosaur-park.html
+++ b/dinosaur-park.html
@@ -25,6 +25,15 @@
 				<a href="javascript:;">下一步</a>
 			</div>
 		</div>
+		<!-- 二维码关注 begin -->
+		<div id="code-share" class="clearfix">
+			<div>
+				<img src="img/dinosaur-park/qrcode.png" />
+				<p class="txt-c">长按二维码关注并购买</p>
+			</div>
+			<i class="close code-close">×</i>
+		</div>
+		<!-- 二维码关注 end -->
 		
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js" ></script>
 		<script type="text/javascript" src="js/dinosaur-park.js" ></script>
