--- a/celebrate-bj.html
+++ b/celebrate-bj.html
@@ -17,7 +17,7 @@
 		<div class="content">
 			<div class="banner">
 				<img src="img/celebrate-bj/banner_bg.jpg"/>
-				<a href="javascript:;">寻找你的星座蛋糕&nbsp;&gt;&gt;</a>
+				<a href="javascript:;" id="receive">点击领取7折优惠券&nbsp;&gt;&gt;</a>
 			</div>
 			<div class="info">
 				<img src="img/celebrate-bj/tips.jpg"/>
@@ -54,5 +54,41 @@
 			<p>微信号：InCake_2012</p>
 			<p class="phone">400-921-5757</p>
 		</footer>
+		
+		<!-- 弹窗 begin -->
+		<div id="popup-mask" class="hide">
+			<div class="popup-info">
+				<div class="mask-title">
+					<span>INCAKE</span>
+				</div>
+				<div class="mask-content clearfix">
+					<div class="box-left">
+						<input type="text" class="phone" placeholder="请输入您的手机号码" /></p>
+						<input type="text" class="regCode" />
+						<a href="javascript:;" class="btn-reg">获取验证码</a>
+						<div class="btn clearfix">
+							<a href="javascript:;" class="btnReceive">领取</a>
+							<a href="javascript:;" class="btnClose">关闭</a>
+						</div>
+					</div>
+					<div class="box-right hide">
+						<div class="desc">
+							<p class="tips">领取成功！</p>
+							<div><span class="text">您的账户名：</span><span>15566668888</span></div>
+							<div><span class="text">密码：</span><span>668888</span></div>
+						</div>
+						<div class="btn clearfix">
+							<a href="javascript:;" class="btnClose">关闭</a>
+							<a href="http://wap.incake.net" class="btnBuy">去逛逛</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- 加入购物车模态框 end -->
+		
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/celebrate-bj.js"></script>
+		
 	</body>
 </html>
