母亲节活动

--- a/register-mothers-day-gaw.html
+++ b/register-mothers-day-gaw.html
@@ -16,13 +16,13 @@
 		
 		<div class="content">
 			<div class="banners banner01">
-				<img src="img/mothers-day-gaw/banner01.jpg"/>
+				<img src="img/mothers-day-gaw/banner01.png"/>
 				<a href="javascript:;" class="cake"></a>
 				<a href="javascript:;" class="btn-go"><img src="img/mothers-day-gaw/btn_go.png"/></a>
 			</div>
 			<p class="text">在母亲节来临之际，INCAKE旗下高端品牌GAW，为您奉上母亲节挚爱系列产品，爱的绽放，选择订购蛋糕鲜花套餐，即享活动折扣哦！</p>
 			<div class="banners banner02">
-				<img src="img/mothers-day-gaw/banner02.jpg"/>
+				<img src="img/mothers-day-gaw/banner02.png"/>
 				<a href="javascript:;" class="cake"></a>
 				<a href="javascript:;" class="btn-go"><img src="img/mothers-day-gaw/btn_go.png"/></a>
 			</div>
@@ -31,7 +31,7 @@
 				<dd>1. 本活动不与其他活动优惠同享，不可使用微信9折，不可使用优惠券代金卡。</dd>
 				<dd>2. 活动时间：4月29日-5月10日。</dd>
 				<dd>3. 配送时间：5月5日开始配送。</dd>
-				<dd>4. 本活动仅限上海\北京\苏州\昆山\福州\厦门地区。</dd>
+				<dd>4. 本活动仅限上海\苏州\昆山\福州\厦门地区。</dd>
 			</dl>
 			<!-- 注册会员 begin -->
             <div class="section" id="frm-register">
