抽奖免单活动

--- a/lottery-free-single.html
+++ b/lottery-free-single.html
@@ -19,6 +19,7 @@
 				<a href="javascript:;" class="banner btn-lottery">
 					<img src="img/lottery-free-single/banner02.png"/>
 				</a>
+				<img src="img/lottery-free-single/logo.png" class="logo"/>
 			</div>
 			
 			<div class="page page02 hide">
@@ -38,6 +39,7 @@
 	                </ul>
 	                <a href="javascript:;" class="btn-regist">提交</a>
 				</div>
+				<img src="img/lottery-free-single/logo.png" class="logo"/>
 			</div>
 			
 			<div class="page page03 hide">
@@ -66,8 +68,8 @@
 						<dd>4. 本券有效期为一个月。</dd>
 					</dl>
 				</div>
+				<img src="img/lottery-free-single/logo.png" class="logo"/>
 			</div>
-			
 		</div>
 		
 		<!-- 抽奖弹窗 -->
