马卡龙起泡酒活动

--- a/register-supermaca.html
+++ b/register-supermaca.html
@@ -38,7 +38,9 @@
 				</li>
 			</ul>
 			<dl class="rules">
-				<dt>活动规则：</dt>
+				<dt><img src="img/supermaca/sparkling_wine.png"/></dt>
+				<dd>红/白两色随机赠送</dd>
+				<dd class="rule-title">活动规则</dd>
 				<dd>◆本活动不与其他活动优惠同享，不可使用微信9折，不可使用优惠券代金卡；</dd>
 				<dd>◆活动时间：6月01日-6月15日；</dd>
 				<dd>◆配送时间：6月03日-6月17日；</dd>
