--- a/register-qixi-festival-bj.html
+++ b/register-qixi-festival-bj.html
@@ -21,11 +21,11 @@
 			</div>
 			<div class="box">
 				<img src="img/qixi-festival-bj/box01.jpg"/>
-				<a href="javascript:;" ><img src="img/qixi-festival/btn_details.png"/></a>
+				<a href="javascript:;" ><img src="img/qixi-festival-bj/btn_details.png"/></a>
 			</div>
 			<div class="box box02">
 				<img src="img/qixi-festival-bj/box02.jpg"/>
-				<a href="javascript:;" ><img src="img/qixi-festival/btn_details.png"/></a>
+				<a href="javascript:;" ><img src="img/qixi-festival-bj/btn_details.png"/></a>
 			</div>
 			<dl class="rules">
 				<dt>活动规则：</dt>
@@ -71,7 +71,7 @@
 		
 		<!-- javascript begin -->
 	    <script src="js/jquery-2.1.4.min.js"></script>
-	    <script src="js/register-qixi-festival.js"></script>
+	    <script src="js/qixi-festival-bj.js"></script>
 	    <!-- javascript end -->
 		
 	</body>
