--- a/register-qixi-festival.html
+++ b/register-qixi-festival.html
@@ -28,6 +28,7 @@
 				<a href="javascript:;" ><img src="img/qixi-festival/btn_details.png"/></a>
 			</div>
 			<p class="notice"><img src="img/qixi-festival/notice.jpg"/></p>
+			<p class="qr-code"><img src="img/qixi-festival/qr-code.jpg"/></p>
 			<dl class="rules">
 				<dt>&nbsp;&nbsp;活动规则：</dt>
 				<dd><span>● 活动城市：上海、苏州、昆山</span></dd>
