中秋月饼活动

--- a/register-mid-autumn-88.html
+++ b/register-mid-autumn-88.html
@@ -48,6 +48,23 @@
                 <img src="img/mid-autumn-88/btn_footer.jpg" alt="">
             </div>
             <!-- 悬浮底部 end -->
+            <!-- 注册结果 begin -->
+	        <div id="mask-result">
+	            <div class="result">
+	                <a href="javascript:;" class="btn-result-close">
+	                    <img src="img/mid-autumn-88/btn_result_close.png" alt="">
+	                </a>
+	                <div class="result-content">
+	                    <div class="result-info result-ok">
+	                        <img src="img/mid-autumn-88/result_ok.jpg" alt="">
+	                    </div>
+	                    <div class="result-info result-fail">
+	                        <img src="img/mid-autumn-88/result_fail.jpg" alt="">
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	        <!-- 注册结果 end -->
 		</div>
 
 		<footer>
@@ -59,6 +76,7 @@
 		<!-- javascript begin -->
 	    <script src="js/jquery-2.1.4.min.js"></script>
 	    <script src="js/register-template.js"></script>
+	    <script src="js/mid-autumn-88.js"></script>
 	    <!-- javascript end -->
 		
 	</body>
