中秋月饼分享送券活动

--- a/register-mid-autumn-88.html
+++ b/register-mid-autumn-88.html
@@ -61,7 +61,13 @@
 	                    <div class="result-info result-fail">
 	                        <img src="img/mid-autumn-88/result_fail.jpg" alt="">
 	                    </div>
+	                    <div class="result-info result-repeat">亲，券已领取过了哦，快去看看吧！</div>
 	                </div>
+	                <a href="javascript:;" class="btn-share">点击分享</a>
+	                <a href="javascript:;" class="btn-select">确&nbsp;定</a>
+	            </div>
+	            <div class="share">
+	            	<img src="img/mid-autumn-88/share_text.png" alt=""/>
 	            </div>
 	        </div>
 	        <!-- 注册结果 end -->
