英式印月抢购活动新增城市切换和库存功能

--- a/midautumn-seckill.html
+++ b/midautumn-seckill.html
@@ -17,6 +17,23 @@
 		<div class="content">
 			<img src="img/midautumn-seckill/banner.png"/>
 			<p class="act-date">8月24日-8月28日</p>
+			<div class="city-location" id="cityLocation">
+				<img src="img/midautumn-seckill/city_location_sh.png" alt="" />
+                <div class="location-popup">
+                    <p>请选择您要配送的城市：</p>
+                    <ul class="clearfix">
+                        <li class="active">上海</li>
+                        <li>苏州</li>
+                        <li>昆山</li>
+                        <li>福州</li>
+                        <li>厦门</li>
+                        <li>南京</li>
+                        <li>北京</li>
+                        <li>杭州</li>
+                        <li>无锡</li>
+                    </ul>
+                </div>
+            </div>
 			<img src="img/midautumn-seckill/moonCakes.png" class="mooncakes"/>
 			<img src="img/midautumn-seckill/information.png"/>
 			<p class="act-tip">距当日抢购结束还剩</p>
@@ -29,6 +46,7 @@
 				<img src="img/midautumn-seckill/price01.png"/>
 				<a href="javascript:;" class="btn-buy"><img src="img/midautumn-seckill/btn_buy.png"/></a>
 			</div>
+			<p class="last-count" id="lastCount">还剩<span>1000</span>盒</p>
 			<ul class="seckill-box clearfix">
 				<li>
 					<p class="seckill-item">
