美味升级活动修改

--- a/delicious-upgrade.html
+++ b/delicious-upgrade.html
@@ -16,7 +16,7 @@
 		
 		<div class="content">
 			<img src="img/delicious-upgrade/banner.png"/>
-			<!--<img src="img/delicious-upgrade/discription.png"/>-->
+			
 			<div class="disc">
 				<p class="discTitle">半价吃半价送</p>
 				<p class="discTitle2">四大经典升级款等你来品评</p>
@@ -45,18 +45,42 @@
 				<p class="tip">INCAKE期待你的参与！</p>
 			</div>
 			<a href="javascript:;" class="btn-begin">开始问卷调查</a>
-			<img src="img/delicious-upgrade/qr_code.png" class="qrCode"/>
 			
-			<div class="cake-list">
-				<img src="img/delicious-upgrade/cakes01.png"/>
-				<a href="javascript:;" class="btn-buy01"></a>
-				<a href="javascript:;" class="btn-buy02"></a>
-			</div>
-			<div class="cake-list">
-				<img src="img/delicious-upgrade/cakes02.png"/>
-				<a href="javascript:;" class="btn-buy03"></a>
-				<a href="javascript:;" class="btn-buy04"></a>
-			</div>
+			<ul class="cakes clearfix">
+				<li>
+					<img src="img/delicious-upgrade/cake01.jpg" class="cake"/>
+					<img src="img/delicious-upgrade/cake01_2.jpg" class="cake-hide"/>
+					<p class="number">还有&nbsp;<span class="count">100</span>&nbsp;个</p>
+					<img src="img/delicious-upgrade/price01.png" class="price"/>
+					<img src="img/delicious-upgrade/price01_2.png" class="price-hide"/>
+					<a href="javascript:;"></a>
+				</li>
+				<li>
+					<img src="img/delicious-upgrade/cake02.jpg" class="cake"/>
+					<img src="img/delicious-upgrade/cake02_2.jpg" class="cake-hide"/>
+					<p class="number">还有&nbsp;<span class="count">1</span>&nbsp;个</p>
+					<img src="img/delicious-upgrade/price02.png" class="price"/>
+					<img src="img/delicious-upgrade/price02_2.png" class="price-hide"/>
+					<a href="javascript:;"></a>
+				</li>
+				<li>
+					<img src="img/delicious-upgrade/cake03.jpg" class="cake"/>
+					<img src="img/delicious-upgrade/cake03_2.jpg" class="cake-hide"/>
+					<p class="number">已售罄</p>
+					<img src="img/delicious-upgrade/price03.png" class="price"/>
+					<img src="img/delicious-upgrade/price03_2.png" class="price-hide"/>
+					<a href="javascript:;"></a>
+				</li>
+				<li>
+					<img src="img/delicious-upgrade/cake04.jpg" class="cake"/>
+					<img src="img/delicious-upgrade/cake04_2.jpg" class="cake-hide"/>
+					<p class="number">还有&nbsp;<span class="count">100</span>&nbsp;个</p>
+					<img src="img/delicious-upgrade/price04.png" class="price"/>
+					<img src="img/delicious-upgrade/price04_2.png" class="price-hide"/>
+					<a href="javascript:;"></a>
+				</li>
+			</ul>
+			
 			<dl class="rules">
 				<dt>活动规则：</dt>
 				<dd>1.本活动仅限在线支付，不可货到付款，不可使用代金卡，优惠券，不可使用微信9折，不与其他优惠同享。</dd>
@@ -73,6 +97,11 @@
 			<p>微信号：InCake_2012</p>
 			<p class="phone">400-921-5757</p>
 		</footer>
+		
+		<!-- javascript begin -->
+	    <script src="js/jquery-2.1.4.min.js"></script>
+	    <script src="js/delicious-upgrade.js"></script>
+	    <!-- javascript end -->
 		
 	</body>
 </html>
