美味升级活动修改

--- a/delicious-upgrade.html
+++ b/delicious-upgrade.html
@@ -35,7 +35,15 @@
 				<p class="discTxt">评完请填写调查问卷哦，</p>
 				<p class="discTxt">因为这是来自你的建议，</p>
 				<p class="discTxt">值得我们最隆重的期许和等待！</p>
-				
+				<div class="address">
+					<p class="addr-cur"><i><img src="img/delicious-upgrade/icon_addr.png"/></i>&nbsp;<span>上海</span></p>
+					<p>如定位不准确，请手动选择您所在的城市。</p>
+					<ul class="clearfix">
+						<li class="cur">上海</li>
+						<li>苏州</li>
+						<li>昆山</li>
+					</ul>
+				</div>
 				<p class="tip2">填问卷就有奖!</p>
 				<p class="info">意见采纳还<span>送189元蛋糕卡</span>哦!</p>
 			</div>
