--- a/upgrade-free.html
+++ b/upgrade-free.html
@@ -28,10 +28,10 @@
 				<img src="img/upgrade-free/cake03.png"/>
 				<a href="javascript:;" class="btn-buy"></a>
 			</div>
-			<div class="cakes">
+			<!--<div class="cakes">
 				<img src="img/upgrade-free/cake04.png"/>
 				<a href="javascript:;" class="btn-buy"></a>
-			</div>
+			</div>-->
 			<p class="text"><img src="img/upgrade-free/text.png"/></p>
 			<dl class="rules">
 				<dt>活动规则：</dt>
