芝士星语活动添加分享送流量卡功能

--- a/queen-cheese-all.html
+++ b/queen-cheese-all.html
@@ -71,8 +71,13 @@
         </div>
         <!-- 注册结果 end -->
 		
+		<div id="mask-share">
+			<div class="share"><img src="img/queen-cheese-all/share.png" alt=""/></div>
+		</div>
+		
 		<!-- javascript begin -->
 	    <script src="js/jquery-2.1.4.min.js"></script>
+	    <script src="js/TweenMax.min.js"></script>
 	    <script src="js/queen-cheese-all.js"></script>
 	    <!-- javascript end -->
 		
