转盘抽奖活动

--- a/rotary-draw.html
+++ b/rotary-draw.html
@@ -38,10 +38,21 @@
 			</div>
 			
 			<div class="rotary">
-				<img src="img/rotary-draw/turntable_bg.png" class="rotary-bg" />
-				<img src="img/rotary-draw/gift_items.png" class="gift-item"/>
-				<img src="img/rotary-draw/btn_start2.png" class="btn-start"/>
-				<img src="img/rotary-draw/icon_arrow.png" class="gift-arrow"/>
+				<img src="img/rotary-draw/turntable_bg.png" />
+				<img src="img/rotary-draw/gift_items.png" class="gift-item abs"/>
+				<img src="img/rotary-draw/btn_start2.png" class="btn-start abs"/>
+				<img src="img/rotary-draw/icon_arrow.png" class="gift-arrow abs"/>
+				<div class="gift-list abs">
+					<img src="img/rotary-draw/gift_bottle.png" class=".prize1"/>
+					<img src="img/rotary-draw/gift_iphone.png" class=".prize2"/>
+					<img src="img/rotary-draw/gift_coupon_50.png" class=".prize3"/>
+					<img src="img/rotary-draw/gift_barbie.png" class=".prize4"/>
+					<img src="img/rotary-draw/gift_minions.png" class=".prize5"/>
+					<img src="img/rotary-draw/gift_thomas.png" class=".prize6"/>
+					<img src="img/rotary-draw/gift_coupon_189.png" class=".prize7"/>
+					<img src="img/rotary-draw/gift_baby.png" class=".prize8"/>
+					<img src="img/rotary-draw/gift_vr.png" class=".prize9"/>
+				</div>
 			</div>
 			
 			<p class="chance">可抽奖<span id="number">0</span>次！</p>
