周年庆活动

--- a/anniversary.html
+++ b/anniversary.html
@@ -13,7 +13,8 @@
 		<div class="content">
 			<div class="banner">
 				<img src="img/anniversary/banner.jpg"/>	
-				<a href="http://wap.incake.net"><img src="img/return_b.png" class="return"/><span>返回首页</span></a>
+				<a href="http://wap.incake.net" class="return"><img src="img/return_b.png"/><span>返回首页</span></a>
+				<a href="javascript:;" class="btn-website"><img src="img/anniversary/btn_website.png" /></a>
 			</div>
 			
 			<div class="exchange">
