爱奇艺活动

--- a/iQIYI.html
+++ b/iQIYI.html
@@ -18,7 +18,7 @@
 		<div class="content">
 			<div class="banner">
 				<img src="img/iQIYI/banner.jpg"/>	
-				<a href="javascript:;" class="btn-buy"></a>
+				<a href="#mask-result" class="btn-down"></a>
 			</div>
 			<p class="info"><img src="img/iQIYI/info.jpg"/></p>
 			<div class="exchange">
@@ -58,7 +58,32 @@
 			<p class="phone">400-921-5757</p>
 		</footer>
 		
+		<!-- 城市选择提示 begin -->
+        <div id="mask-result">
+            <div class="result">
+                <div class="result-content">
+                    <div class="result-info">
+                    	<a href="javascript:;" class="btn-close"><img src="img/iQIYI/btn_close.png"/></a>
+                        <p class="tip-title">请选择城市</p>
+                        <ul class="tip-text clearfix">
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        	<li>上海市</li>
+                        </ul>
+                        <a href="javascript:;" class="btn-ok">确  定</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 城市选择提示 end -->
+		
 		<script src="zepto/zepto.min.js"></script>
+		<script src="js/TweenMax.min.js"></script>
 		<script src="dialog2/js/dialog.js"></script>
 		<script src="js/iQIYI.js"></script>
 		
