四周年活动新增跳转至蛋糕馆悬浮框

--- a/anniversary.html
+++ b/anniversary.html
@@ -13,6 +13,7 @@
 		<div class="content">
 			<div class="banner">
 				<img src="img/anniversary/banner.jpg"/>	
+				<a class="fixation" href="http://wap.incake.net/icake/list.aspx"><img  src="img/anniversary/fixation.png"/></a>
 				<a href="http://wap.incake.net" class="return"><img src="img/return_b.png"/><span>返回首页</span></a>
 				<a href="javascript:;" class="btn-website"><img src="img/anniversary/btn_website.png" /></a>
 			</div>
