一日三送活动

--- a/three-in-one.html
+++ b/three-in-one.html
@@ -38,10 +38,10 @@
 			</div>
 			<dl class="rules">
 				<dt>活动规则</dt>
-				<dd>◆ 本活动仅限在线订购，不可使用代金卡优惠券，不与其他活动同享，（周年庆活动除外）；</dd>
-				<dd>◆ 参加当日配送产品，仅限活动页三款：女王芝士，浓情巧克力，经典双拼；</dd>
-				<dd>◆ 每天10:00前下单，16:00-21:30配送；12:30前下单，18:00-21:30配送；15:30前下单，20:00-21:30配送；</dd>
-				<dd>◆ 活动仅限上海。</dd>
+				<dd>本活动仅限在线订购，不可使用代金卡优惠券，不与其他活动同享，（周年庆活动除外）；</dd>
+				<dd>参加当日配送产品，仅限活动页三款：女王芝士，浓情巧克力，经典双拼；</dd>
+				<dd>每天10:00前下单，16:00-21:30配送；12:30前下单，18:00-21:30配送；15:30前下单，20:00-21:30配送；</dd>
+				<dd>活动仅限上海。</dd>
 			</dl>
 		</div>
 
