增加弹窗样式

--- a/register-welfare16.html
+++ b/register-welfare16.html
@@ -67,6 +67,10 @@
 		                </ul>
 		                <p class="tips">未通过验证相关提示信息</p>
 		                <a href="javascript:;" id="btn-register">点击领取30元</a>
+		                <div class="btn-other clearfix">
+							<a href="javascript:;" id="btn-goOn">继续访问</a>
+		                	<a href="javascript:;" id="btn-receive">点击领取30元</a>		                	
+		                </div>
                     </div>
                 </div>
             </div>
