增加快注提示窗

--- a/register-welfare16.html
+++ b/register-welfare16.html
@@ -39,13 +39,17 @@
 				<dd>◆30元有效期领取日起一个月；</dd>
 				<dd>◆活动仅限上海／苏州／昆山／福州／厦门／南京／北京／杭州。</dd>
 			</dl>
-		</div>`
+		</div>
 
 		<footer>
 			<img src="img/QrCode_b.jpg" />
 			<p>微信号：InCake_2012</p>
 			<p class="phone">400-921-5757</p>
 		</footer>
+		
+		<!-- 快注提示 begin -->
+		<a href="javascript:;" id="mask-tip"><img src="img/register-welfare16/tips.png"/></a>
+		<!-- 快注提示 end -->
 		
 		<!-- 弹窗提示 begin -->
         <div id="mask-result">
