--- a/ali-Aries.html
+++ b/ali-Aries.html
@@ -6,7 +6,7 @@
 		<meta name="format-detection" content="telephone=no" />
 		<title>星座蛋糕半价活动</title>
 		<link rel="stylesheet" type="text/css" href="css/common_b.css"/>
-		<link rel="stylesheet" type="text/css" href="css/half-price-Aries.css"/>
+		<link rel="stylesheet" type="text/css" href="css/ali-Aries.css"/>
 	</head>
 	<body>
 		<header>
@@ -15,14 +15,13 @@
 		</header>
 		
 		<div class="content">
-			
 			<div class="cakes cake-female">
-				<img src="img/half-price-Aries/banner.png"/>
+				<img src="img/ali-Aries/banner.png"/>
 				<a href="javscript:;" class="buy">
-					<img src="img/half-price-Aries/btn.png"/>
+					<img src="img/ali-Aries/btn.png"/>
 				</a>
 				<a href="javascript:;" class="ali">
-					<img src="img/half-price-Aries/ali.png"/>
+					<img src="img/ali-Aries/ali.png"/>
 				</a>
 			</div>
 			
@@ -32,34 +31,6 @@
 				<p>敬请期待</p>
 				<p>2.定星座蛋糕，请提前三天订购。</p>
 			</div>
-			
-			<!-- 注册会员 begin -->
-			<div class="section" id="frm-register">
-				<div class="sec-header">
-					<p class="sec-title"><span>会员登录</span></p>
-				</div>
-				<div class="sec-body">
-					<ul class="frm">
-						<li class="clearfix">
-							<i class="icon-mobile"></i>
-							<input type="number" class="txt-mobile" placeholder="请输入手机号">
-							<a href="javascript:;" id="btn-vcode">获取短信验证码</a>
-						</li>
-						<li class="clearfix">
-							<i class="icon-vcode"></i>
-							<input type="number" class="txt-vcode" placeholder="请输入短信验证码">
-						</li>
-					</ul>
-					<a href="javascript:;" id="btn-register">立即订购</a>
-				</div>
-			</div>
-			<!-- 注册会员 end -->
-			<!-- 悬浮底部 begin -->
-			<div id="float-footer">
-				<img src="img/half-price-Aries/btn_footer.jpg" alt="">
-			</div>
-			<!-- 悬浮底部 end -->
-			
 		</div>
 		
 		<footer>
@@ -70,7 +41,6 @@
 		
 		<!-- javascript begin -->
 	    <script src="js/jquery-2.1.4.min.js"></script>
-	    <script src="js/register-template.js"></script>
 	    <!-- javascript end -->
 		
 	</body>
