--- a/618.html
+++ b/618.html
@@ -38,7 +38,18 @@
 				</dl>
 			</div>
 		</div>
-		
+		<!--注册弹框-->
+		<div class="sahde-login">
+			<div class="login">
+				<p>登录注册</p>
+				<ul>
+					<li><input type="number" placeholder="请输入手机号" /> <a href="javascript:;">获取短信验证码</a> </li>
+					<li><input type="number" placeholder="请输入手机验证码" /></li>
+					<li><a href="javascript:;">立即订购</a></li>
+				</ul>
+				<span></span>
+			</div>
+		</div>
 		<footer>
 			<img src="img/QrCode_b.jpg" />
 			<p>微信号：InCake_2012</p>
@@ -46,7 +57,6 @@
 		</footer>
 		
 		<!-- javascript begin -->
-	    <script src="js/jquery-2.1.4.min.js"></script>
 	    <!-- javascript end -->
 		
 	</body>
