--- a/fathers-day-new.html
+++ b/fathers-day-new.html
@@ -15,9 +15,10 @@
 		</header>
 		
 		<div class="content">
-			<img src="img/fathers-day-new/banner-t.png"/>
+			<img src="img/fathers-day-new/banner.gif"/>
+			<img src="img/fathers-day-new/dad.png"/>
 			<img src="img/fathers-day-new/banner-b.png"/>
-			<img class="hero" src="img/fathers-day-new/dad-hero.gif"/>
+			<img class="price" src="img/fathers-day-new/price.png"/>
 		</div>
 		<div class="rules">
 			<img src="img/fathers-day-new/rulebg.png"/>
